--- a/StarterCode/index.html
+++ b/StarterCode/index.html
@@ -27,15 +27,12 @@
         <div class="row">
             <div class="col-xs-12  col-md-9">
                 <div class="article">
-                    <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                        mi vitae est. Mauris placerat eleifend leo.</p>
-
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                        mi vitae est. Mauris placerat eleifend leo.</p>
-
-                    <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies
-                        mi vitae est. Mauris placerat eleifend leo.</p>
+                    <h2>Correlations Discovered Between Healthcare and Poverty</h2>
+                    <p>There is a definitely increasing relationship between Poverty (%) and Lacks Healthcare (%).</p>
+                    <p> Other research results :
+                        <p>Texas leads Lacks Healthcare category with approx.</p>
+                        <p>Massachusetts is the best healthcare coverage.</p>
+                        <p>New Hampshire has the lowest level, while Mississippi and New Mexico lead this category.</p>
                 </div>
             </div>
         </div>
@@ -43,7 +40,8 @@
 
     <!-- Footer-->
     <div id="footer">
-        <p>The Coding Boot Camp&copy;2020</p>
+        <p class="footer1">Data Analytics and Visualization -- May, 2020</p>
+        <p class="footer3">Author : Ekin KAPLAN</p>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
