--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="article">
                     <h2>Correlations Discovered Between Healthcare and Poverty</h2>
                     <p>There is a definitely increasing relationship between Poverty (%) and Lacks Healthcare (%).</p>
-                    <p> Other research results :
+                    <p><br><br>Other research results :
                         <p>Texas leads Lacks Healthcare category with approx.</p>
                         <p>Massachusetts is the best healthcare coverage.</p>
                         <p>New Hampshire has the lowest level, while Mississippi and New Mexico lead this category.</p>
